src/objects/Org_Related_List_User_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Default_Excluded_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Excluded Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fields_Excluded_From_Table__c</fullName>
        <label>Fields Excluded From Table</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Developer_Name__c</fullName>
        <label>Object Developer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Outreach__c</fullName>
                </value>
                <value>
                    <fullName>Generic_Relationship__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Org_Related_List_User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Org Related List User Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RLUP-{000000}</displayFormat>
        <label>Org Related List User Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Related List User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>